--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,47 @@
-.App {
-  text-align: center;
+.HeroImage {
+  min-height: 600px;
+  padding: 50px 0px;
+
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.Container {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0px auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.LogoImage {
+  width: 300px;
 }
 
-.App-link {
-  color: #61dafb;
+.LogoImage img {
+  max-width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.About {
+  margin: 50px 0;
+  text-align: center
+}
+
+h1 {
+  color: #D9E021;
+}
+
+p {
+  margin: 40px 0;
+}
+
+a, a:hover, a:focus, a:active {
+  color: #fff;
+  background: #D9E021;
+  padding: 10px;
+  font-size: 18px;
+  border-radius: 10px;
+  text-decoration: none;
+  transition: background 0.5s;
+
+}
+
+a:hover, a:focus {
+  background: rgb(179, 184, 32)
 }
