add fa icon hand to button

--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,10 @@ a:hover, a:focus {
   min-height: 300px;
 }
 
+.About .Content a svg {
+  margin-right: 0.5em;
+}
+
 .About .Content p {
   margin: 40px 0;
   color: #666;
